[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 4 )

[node name="Main" type="Node2D" groups=["MAIN"]]
script = ExtResource( 2 )

[node name="Player" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 640, 688 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Player/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Sprite/Area2D"]
position = Vector2( 0, -28 )
shape = SubResource( 1 )

[node name="InfoLabel" type="Node2D" parent="."]

[node name="Fall" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="Player/Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
